tests/ui/feature-gates/feature-gate-cfg-relocation-model.stderr
error[E0658]: `cfg(relocation_model)` is experimental and subject to change
  --> $DIR/feature-gate-cfg-relocation-model.rs:1:7
   |
LL | #[cfg(relocation_model = "pic")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #114929 <https://github.com/rust-lang/rust/issues/114929> for more information
   = help: add `#![feature(cfg_relocation_model)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
