tests/ui/feature-gates/feature-gate-cfg-relocation-model.rs
#[cfg(relocation_model = "pic")] //~ ERROR
fn _foo() {}

fn main() {}
